--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -9,6 +9,7 @@ body {
     padding-right: 0;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 30px;
     display: block;
     position: relative;
 }
